syntax = "proto3";

option go_package = "email/server";

message Email {
    string from = 1;
    string to = 2;
    string subject = 3;
    string body = 4;
}

message EmailResponse {
    repeated Email emails = 1;
}

message EmailRequest {}

service Inbox {
    rpc GetEmails(EmailRequest) returns (EmailResponse) {};
}
